--- a/iac/voting/Chart.yaml
+++ b/iac/voting/Chart.yaml
@@ -31,3 +31,6 @@ dependencies:
   - name: redis
     repository: https://charts.bitnami.com/bitnami 
     version: 18.12.1
+  - name: nginx-ingress-controller
+    repository: https://charts.bitnami.com/bitnami 
+    version: 10.3.5
