--- a/iac/voting/charts/voting-results/Chart.yaml
+++ b/iac/voting/charts/voting-results/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: voting
+name: voting-results
 description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
@@ -22,18 +22,3 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
-
-
-dependencies:
-  - name: voting-app
-    repository: "file://charts/voting-app"
-    version: "0.1.0"
-  - name: redis
-    repository: https://charts.bitnami.com/bitnami 
-    version: 18.12.1
-  - name: postgresql
-    repository: https://charts.bitnami.com/bitnami 
-    version: 14.0.5
-  - name: nginx-ingress-controller
-    repository: https://charts.bitnami.com/bitnami 
-    version: 10.3.5
