--- a/iac/voting/charts/voting-results/templates/deployment.yaml
+++ b/iac/voting/charts/voting-results/templates/deployment.yaml
@@ -26,7 +26,7 @@ spec:
             - name: PGHOST
               value: 'voting-postgresql'
             - name: PGUSER
-              value: 'results'
+              value: 'postgres'
             - name: PGDATABASE
               value: 'voting'
             - name: PGPASSWORD
