--- a/iac/voting/charts/voting-app/templates/service.yaml
+++ b/iac/voting/charts/voting-app/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "voting-app.fullname" . }}
+  name: {{ include "voting.fullname" . }}
   labels:
-    {{- include "voting-app.labels" . | nindent 4 }}
+    {{- include "voting.labels" . | nindent 4 }}
 spec:
   type: ClusterIP
   ports:
@@ -11,5 +11,4 @@ spec:
     targetPort: {{ .Values.port }}
     protocol: TCP
   selector:
-    matchLabels:
-      {{- include "voting-app.selectorLabels" . | nindent 4 }}
+    {{- include "voting.selectorLabels" . | nindent 4 }}
