--- a/services/voting-worker/Dockerfile
+++ b/services/voting-worker/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:21-jdk-alpine
+FROM eclipse-temurin:21-jdk-alpine as build
 
 #RUN apt-get update -qq && apt-get install -y maven && apt-get clean
 
@@ -18,5 +18,8 @@ RUN ["mvn", "verify"]
 ADD src /code/src
 RUN ["mvn", "package"]
 
+FROM eclipse-temurin:21-jdk-alpine as run
+
+COPY --from=build ./code/target/worker-jar-with-dependencies.jar target
 #CMD ["/usr/lib/jvm/java-7-openjdk-amd64/bin/java", "-jar", "target/worker-jar-with-dependencies.jar"]
 CMD ["java", "-jar", "target/worker-jar-with-dependencies.jar"]
